fix rp-page-content out of view at the top in rpArticleCard page

--- a/public/stylesheets/less/rp-content.less
+++ b/public/stylesheets/less/rp-content.less
@@ -15,7 +15,7 @@ html {
 }
 .rp-page-content {
     position: relative;
-    top: 0px;
+    top: 0 !important;
     background-color: @rp-background-content;
     margin-bottom: -50px;
 }
